removing auto proxy

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,6 @@ set(PYTHON_INCLUDE_PATH "/usr/include/python2.7")
 #SET (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
 #SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
 
-add_executable(proxy_check proxy_check.cpp)
 add_executable(botscript main.cpp lua_connection.cpp bot.cpp module.cpp)
 add_library(pybotscript SHARED pybotscript.cpp lua_connection.cpp bot.cpp module.cpp)
 set_target_properties(pybotscript PROPERTIES LINKER_LANGUAGE CXX)
@@ -23,13 +22,9 @@ include_directories("../external_lib/rapidjson-r64/include")
 include_directories("../external_lib/lua-5.2.0/src")
 include_directories("../external_lib/tidy/include")
 include_directories("../external_lib/pugixml-1.0/src")
-include_directories("../external_lib/mongo-client-2.1.1/build/build/include")
-include_directories("../external_lib/mongo-client-2.1.1/build/build/include/mongo")
 
 set_target_properties(botscript PROPERTIES LINK_FLAGS "-L../ -L${BOOST_PATH}stage/lib/")
 set_target_properties(pybotscript PROPERTIES LINK_FLAGS "-L../ -L${BOOST_PATH}stage/lib/")
-set_target_properties(proxy_check PROPERTIES LINK_FLAGS "-L../ -L${BOOST_PATH}/stage/lib/")
 
-target_link_libraries(botscript mongoclient boost_system boost_thread boost_regex boost_iostreams boost_filesystem -pthread tidy pugixml lua dl z)
-target_link_libraries(pybotscript mongoclient boost_system boost_python boost_thread-mt boost_regex boost_iostreams boost_filesystem -pthread tidy pugixml lua dl z)
-target_link_libraries(proxy_check mongoclient boost_system boost_thread boost_regex boost_iostreams boost_filesystem -pthread tidy pugixml dl z)
+target_link_libraries(botscript boost_system boost_thread boost_regex boost_iostreams boost_filesystem -pthread tidy pugixml lua dl z)
+target_link_libraries(pybotscript boost_system boost_python boost_thread-mt boost_regex boost_iostreams boost_filesystem -pthread tidy pugixml lua dl z)
