using boost-thread instead of boost-thread-mt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,4 +27,4 @@ set_target_properties(botscript PROPERTIES LINK_FLAGS "-L../ -L${BOOST_PATH}stag
 set_target_properties(pybotscript PROPERTIES LINK_FLAGS "-L../ -L${BOOST_PATH}stage/lib/")
 
 target_link_libraries(botscript boost_system boost_thread boost_regex boost_iostreams boost_filesystem -pthread tidy pugixml lua dl z)
-target_link_libraries(pybotscript boost_system boost_python boost_thread-mt boost_regex boost_iostreams boost_filesystem -pthread tidy pugixml lua dl z)
+target_link_libraries(pybotscript boost_system boost_python boost_thread boost_regex boost_iostreams boost_filesystem -pthread tidy pugixml lua dl z)
