--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(botscript)
 set(BOOST_PATH "/home/wasabi/boost_1_52_0/")
 
 # Uncomment to use Clang compiler (improved error/warning output).
-#SET (CMAKE_CXX_COMPILER             "/usr/bin/clang++")
+SET (CMAKE_CXX_COMPILER             "/usr/bin/clang++")
 SET (CMAKE_CXX_FLAGS                "-std=c++0x -g -O0")
 #SET (CMAKE_CXX_FLAGS_DEBUG          "-g")
 #SET (CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
@@ -19,6 +19,12 @@ add_executable(botscript
     src/lua/lua_util.cpp
 )
 
+add_executable(proxy_check
+    src/proxy_check.cpp
+    src/http/url.cc
+    src/http/http_source.cc
+)
+
 include_directories(${BOOST_PATH})
 include_directories("external_lib/rapidjson-r64/include")
 include_directories("external_lib/lua-5.2.0/src")
@@ -26,4 +32,7 @@ include_directories("external_lib/tidy/include")
 include_directories("external_lib/pugixml-1.0/src")
 
 set_target_properties(botscript PROPERTIES LINK_FLAGS "-L../ -L${BOOST_PATH}stage/lib/")
+set_target_properties(proxy_check PROPERTIES LINK_FLAGS "-L../ -L${BOOST_PATH}stage/lib/")
+
 target_link_libraries(botscript boost_system boost_thread boost_regex boost_iostreams boost_filesystem -pthread tidy pugixml lua z dl)
+target_link_libraries(proxy_check boost_system boost_regex boost_iostreams -pthread z)
