--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,20 +4,25 @@ project(botscript)
 set(BOOST_PATH "/home/wasabi/boost_1_52_0/")
 
 # Uncomment to use Clang compiler (improved error/warning output).
-SET (CMAKE_CXX_COMPILER             "/usr/bin/clang++")
+#SET (CMAKE_CXX_COMPILER             "/usr/bin/clang++")
 SET (CMAKE_CXX_FLAGS                "-std=c++0x -g -O0")
 #SET (CMAKE_CXX_FLAGS_DEBUG          "-g")
 #SET (CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
 #SET (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
 #SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
 
-add_executable(proxy_check
+add_executable(botscript
   src/http/url.cc
   src/http/http_source.cc
   src/http/http_con.cc
   src/http/util.cc
   src/http/webclient.cc
-  src/proxy_check.cpp
+  src/lua/lua_connection.cc
+  src/lua/lua_util.cc
+  src/lua/lua_http.cc
+  src/bot_browser.cc
+  src/bot.cc
+  src/main.cc
 )
 
 include_directories(${BOOST_PATH})
@@ -26,6 +31,6 @@ include_directories("external_lib/lua-5.2.0/src")
 include_directories("external_lib/tidy/include")
 include_directories("external_lib/pugixml-1.0/src")
 
-set_target_properties(proxy_check PROPERTIES LINK_FLAGS "-L../ -L${BOOST_PATH}stage/lib/")
+set_target_properties(botscript PROPERTIES LINK_FLAGS "-L../ -L${BOOST_PATH}stage/lib/")
 
-target_link_libraries(proxy_check boost_system boost_thread boost_regex boost_iostreams -pthread z tidy pugixml lua z dl)
+target_link_libraries(botscript boost_system boost_thread boost_filesystem boost_regex boost_iostreams -pthread z tidy pugixml lua z dl)
