--- a/external_lib/pugixml-1.0/scripts/CMakeLists.txt
+++ b/external_lib/pugixml-1.0/scripts/CMakeLists.txt
@@ -1,5 +1,11 @@
 project(pugixml)
 
+if(MSVC)
+else()
+	# Enable building a shared library.
+	add_definitions("-fPIC")
+endif()
+
 set(SOURCES ../src/pugixml.hpp ../src/pugiconfig.hpp ../src/pugixml.cpp)
 
 add_library(pugixml STATIC ${SOURCES})
