target link libraries for static target bs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ add_library(bs STATIC
   src/package.cc
   src/bot.cc
 )
+target_link_libraries(bs ${Boost_LIBRARIES} tidy pugixml lua z dl -pthread)
 
 
 ################################
