--- a/external_lib/tidy/CMakeLists.txt
+++ b/external_lib/tidy/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8.8)
 project(tidy)
 
 if(MSVC)
+elseif(MINGW)
+	set_source_files_properties(src/mappedio.c PROPERTIES COMPILE_FLAGS -D_MSC_VER=1700)
 else()
 	# Enable building a shared library.
 	add_definitions("-fPIC")
