make it compile for android

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,9 @@ if(MSVC)
 elseif(MINGW)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
   add_definitions(-DBOOST_THREAD_USE_LIB -D_WIN32_WINNT=0x0501)
+elseif(ANDROID)
+  add_definitions(-DANDROID)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11")
 else()
   # GCC -> use c++11 standard.
   add_definitions("-std=c++11 -fPIC")
